--- a/compounding/compounding-2.html
+++ b/compounding/compounding-2.html
@@ -13,16 +13,14 @@
 
     <title>TVM - Compounding</title>
 </head>
-
 <body>
     <div class="container-fluid">
 
-        <!---------------- SLIDE 2, Content  *************** -->
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Compound Interest</h2>
-                    <!-- <h3 class="secondary-title">Introduction</h3> -->
+                    <!-- <h3 class="secondary-title">Review</h3> -->
                 </div>
             </div>
             <nav class="row">
@@ -34,37 +32,22 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <div id="intro2">
-                            <h3>Introduction</h3>
-                            <p>In Part 1 of the Time Value of Money tutorial, you learned about the general format of the TVM equation. To make it easier to grasp the basic concepts, we overlooked one very important factor... something that increases the growth of investments and is very common in the real world.</p>
-                            <p>We ignored compounding!</p>
-                            <p>In TVM Part 2, we'll introduce compound interest into the TVM equation.</p>
-                        </div>
-                        <div id="learningObj2">
-                            <h3>Learning Objectives</h3>
-                            <p>By the end of this tutorial, you will:
-                                <ul>
-                                    <li>Understand the concept of compounded interest</li>
-                                    <li>Convert stated (nominal) interest to actual interest</li>
-                                    <li>Memorize the general format of the TVM equation with compounding</li>
-                                    <li>Identify the variable in a word problem so you can use them in the TVM equation</li>
-                                    <li>Solve the equation for any unknown variable</li>
-                                </ul>
-                            </p>
-                        </div>
-                        <div id="requirements2">
-                            <h3>Requirements</h3>
-                            <p>To complete this tutorial, you will need:
-                                <ul>
-                                    <li>A background in the basics of Time Value of Money or completion of the TVM1 tutorial</li>
-                                    <li>Basic algebra skills</li>
-                                    <li>Scratch paper and pencil or pen</li>
-                                    <li>A calculator <span class="note">(optional: a financial calculator)</span></li>
-                                </ul>
-                            </p>
-                            <p>TVM may required you to use math skills you haven't used in a while. <b>Please contact your instructor if you need additional help!</b></p>
-                            <p>Once you have everything you need, let’s get started!</p>
-                        </div>
+                        <h3>Compound Interest</h3>
+                        <p>Compound interest is interest calculated on the initial principal, which also includes all of the accumulated interest from previous time periods. Compounding increases the growth of investments and is very common in the real world.</p>
+
+                        <p>The basic form of the Time Value of Money (TVM) equation is:
+                            <div> <span class="math">\(FV=PV(1+i)^n\)</span>
+                            </div>
+                        </p>
+                        <p>Where:<br>
+                            <div class="math">
+                                FV = Future Value<br>
+                                PV = Present Value<br>
+                                i = interest rate (%)<br>
+                                n = number of years
+
+                            </div>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -86,6 +69,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <script src="../script.js"></script>
 </body>
