--- a/compounding/compounding-ex1a.html
+++ b/compounding/compounding-ex1a.html
@@ -13,10 +13,11 @@
 
     <title>TVM - Compounding</title>
 </head>
+
 <body>
     <div class="container-fluid">
 
-        <!---------------- SLIDE 11 - CONTENT *********** -->
+        <!---------------- SLIDE 9 - CONTENT *********** -->
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -33,17 +34,15 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Let's verify that the equation works by checking it against the example. We calculated that $100 invested at 10% with semi-annual compounding will be worth $110.25 at the end of 1 year. Does the equation agree?</p>
-                        <p>Individual interest calculations:
-                            <div class="bottom-space">
-                                <img src="./images/tvm2_semi-annual_interest_timeline_part2.png" class="img-fluid " alt="">
+                        <h4>Exercise 1: Solution</h4>
+                        <p class="question">How much would you have at the end of a year if you invested $100 at 10% compounded semi-annually?</p>
+                        <p class="answer">The answer is C.
+                            <div class="text-">
+                                <img src="../images/choose_a_timeline_c.png" class="img-fluid " alt="">
                             </div>
                         </p>
-                        <p>Using the equation:
-                            <div class="bottom-space">
-                                <img src="./images/tvm_sample_equation_compounding_verification.png" class="img-fluid " alt="">
-                            </div>
-                        </p>
+                        <p>Notice that half the stated interest is paid each period, but there are twice as many periods because of semi-annual compounding. Mathematically, interest was divided by 2 and the number of terms was multiplied by 2.</p>
+                        <p>Adding up the principal and two Interest payments results in 100 + 5 + 5.25 = $110.25. That's $0.25 more money than with annual compounding.</p>
                     </div>
                 </div>
             </div>
@@ -52,8 +51,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="compounding-10.html">Back</a>
-                    <a type="button" class="btn" href="compounding-12.html">Continue</a>
+                    <a type="button" class="btn" href="compounding-7.html">Back</a>
+                    <a type="button" class="btn" href="compounding-9.html">Continue</a>
                 </div>
             </div>
         </div>
@@ -66,6 +65,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <script src="../script.js"></script>
 </body>
