--- a/not-on-server/compounding-2.html
+++ b/not-on-server/compounding-2.html
@@ -17,12 +17,12 @@
 <body>
     <div class="container-fluid">
 
-        <!---------------- SLIDE 13 - CONTENT -->
+        <!---------------- SLIDE 2, Content  *************** -->
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Compound Interest</h2>
-                    <!-- <h3 class="secondary-title">Adding Compounding to the TVM Equation</h3> -->
+                    <!-- <h3 class="secondary-title">Introduction</h3> -->
                 </div>
             </div>
             <nav class="row">
@@ -34,11 +34,37 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">How much money would I have after a year if I invested $100 at 10% with daily compounding?</p>
-                        <div class="bottom-space">
-                            <img src="./images/tvm2_daily_compounded_interest.png" class="img-fluid " alt="">
+                        <div id="intro2">
+                            <h3>Introduction</h3>
+                            <p>In Part 1 of the Time Value of Money tutorial, you learned about the general format of the TVM equation. To make it easier to grasp the basic concepts, we overlooked one very important factor... something that increases the growth of investments and is very common in the real world.</p>
+                            <p>We ignored compounding!</p>
+                            <p>In TVM Part 2, we'll introduce compound interest into the TVM equation.</p>
                         </div>
-                        <p>The answer is $110.52, wich is $0.26 more than semi-annual compounding, and $0.52 more than annual compounding.</p>
+                        <div id="learningObj2">
+                            <h3>Learning Objectives</h3>
+                            <p>By the end of this tutorial, you will:
+                                <ul>
+                                    <li>Understand the concept of compounded interest</li>
+                                    <li>Convert stated (nominal) interest to actual interest</li>
+                                    <li>Memorize the general format of the TVM equation with compounding</li>
+                                    <li>Identify the variable in a word problem so you can use them in the TVM equation</li>
+                                    <li>Solve the equation for any unknown variable</li>
+                                </ul>
+                            </p>
+                        </div>
+                        <div id="requirements2">
+                            <h3>Requirements</h3>
+                            <p>To complete this tutorial, you will need:
+                                <ul>
+                                    <li>A background in the basics of Time Value of Money or completion of the TVM1 tutorial</li>
+                                    <li>Basic algebra skills</li>
+                                    <li>Scratch paper and pencil or pen</li>
+                                    <li>A calculator <span class="note">(optional: a financial calculator)</span></li>
+                                </ul>
+                            </p>
+                            <p>TVM may required you to use math skills you haven't used in a while. <b>Please contact your instructor if you need additional help!</b></p>
+                            <p>Once you have everything you need, let’s get started!</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -52,7 +78,6 @@
                 </div>
             </div>
         </div>
-
 
     </div> <!--  end of container -->
 
