--- a/compounding/compounding-5.html
+++ b/compounding/compounding-5.html
@@ -17,8 +17,7 @@
 <body>
     <div class="container-fluid">
 
-
-        <!---------------- SLIDE 5 - content ------------------->
+        <!----------------  SLIDE 6 - Content ****************** -->
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -35,27 +34,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Compound Interest</h3>
-                        <p>To state it simply, compound Interest is when interest earns interest.</p>
-                        <p class>Compounding takes place on some sort of regular schedule. When solving word problems, you'll look for key words that indicate how often interest is compounded:
-                            <ul>
-                                <li>annually (1 time per year)</li>
-                                <li>semi-annually (2 times per year)</li>
-                                <li>quarterly (4 times per year)</li>
-                                <li>monthly (12 times per year)</li>
-                                <li>daily (365 times per year or 366 times per year in a leap year)</li>
-                            </ul>
-                            <p>If there is no specifically stated compounding schedule, you should assume interest is compounded annually.</p>
-                        </p><br>
-                        <h3>Simple Interest</h3>
-                        <p>The alternative to compound interest is simple interest, which means that interest is only paid once at the end of the investment.</p>
-                        <p class="math">Simple interest = principal * interest rate * time</p>
-                        <p class="math">Example:<br> 20 = 100 * 10% * 2</p>
-                        <p>The timeline of events looks like this:
-                            <div class="bottom-space">
-                                <img src="./images/tvm2_simple_interest_timeline.png" class="img-fluid " alt="">
-                            </div>
-                        </p>
+                        <p>Comparing the results of a 2-year investment with simple or annually compounded interest, you'll note that Future Value is higher ($120 to $121). Compound interest grows an investment more quickly and results in a higher Future Value (FV). Moreover, the more frequently interest is compounded, the faster the growth and the higher the FV.</p>
+                        <div class="bottom-space">
+                            <p>
+                                <h3>Simple Interest</h3>
+                                <img src="../images/tvm2_simple_interest_timeline.png" class="img-fluid " alt="one interest period">
+                            </p><br>
+                            <h3>Compound Interest</h3>
+                            <p><img src="../images/tvm2_annual_interest_timeline_compounding_shown.png" class="img-fluid " alt="two interest periods that show compound interest"></p>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -78,6 +66,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <script src="../script.js"></script>
 </body>
