--- a/compounding/compounding-6.html
+++ b/compounding/compounding-6.html
@@ -17,12 +17,12 @@
 <body>
     <div class="container-fluid">
 
-        <!----------------  SLIDE 6 - Content ****************** -->
+        <!----------------  SLIDE 7 - Content ****************** -->
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Compound Interest</h2>
-                    <!-- <h3 class="secondary-title">Compound vs. Simple Interest</h3> -->
+                    <!-- <h3 class="secondary-title">Nominal vs. Actual Interest Rates</h3> -->
                 </div>
             </div>
             <nav class="row">
@@ -34,16 +34,20 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Comparing the results of a 2-year investment with simple or annually compounded interest, you'll note that Future Value is higher ($120 to $121) with compounding.</p>
-                        <div class="bottom-space">
-                            <p>
-                                <h3>Simple Interest</h3>
-                                <img src="./images/tvm2_simple_interest_timeline.png" class="img-fluid " alt="">
-                            </p><br>
-                            <h3>Compound Interest</h3>
-                            <p><img src="./images/tvm2_annual_interest_timeline_compounding_shown.png" class="img-fluid " alt=""></p>
-                        </div>
-                        <p>Compound interest grows an investment more quickly and results in a higher Future Value (FV). Moreover, the more frequently interest is compounded, the faster the growth and the higher the FV.</p>
+                        <p>So far, when referring to interest rates, we have used the stated, or nominal rate.</p>
+                        <p>Stated rates are usually expressed as an annual percentage, which can be a bit misleading when compounding is involved. The next example shows how nominal and actual interest rates can differ due to compounding.</p>
+                        <p>Let's continue with our original example but assume semi-annual compounding.</p>
+                        <p>The bank pays interest every 6 months. The first interest payment, after 6 months, is calculated based on the original investment PLUS the first interest payment. Every 6 months, the amound of interest paid increases. Visually, semi-annual compounding looks like this:
+                            <div class="bottom-space">
+                                <img src="../images/tvm2_semi-annual_interest_timeline.png" class="img-fluid " alt="">
+                            </div>
+                        </p>
+                        <p>Since interest is compounded semi-annually, half of 10% (or 5%)would be credited to the account after 6 months and the other half at the end of the year.
+                            <div class="bottom-space">
+                                <img src="../images/tvm2_semi-annual_interest_timeline_part2.png" class="img-fluid " alt="">
+                            </div>
+                        </p>
+                        <p>Notice that the second interest payment is higher than the first. Interest earned during the first term will earn interest in the second term. By compounding, we earned 0.25% more than the nominal rate (i.e., what we would make with annual compounding). Therefore, actual interest is 10.25%.</p>
                     </div>
                 </div>
             </div>
@@ -58,7 +62,6 @@
             </div>
         </div>
 
-
     </div> <!--  end of container -->
 
 
@@ -66,6 +69,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <script src="../script.js"></script>
 </body>
