--- a/compounding/compounding-7.html
+++ b/compounding/compounding-7.html
@@ -17,12 +17,12 @@
 <body>
     <div class="container-fluid">
 
-        <!----------------  SLIDE 7 - Content ****************** -->
+        <!---------------- SLIDE 10 - CONTENT ********************** -->
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Compound Interest</h2>
-                    <!-- <h3 class="secondary-title">Nominal vs. Actual Interest Rates</h3> -->
+                    <!-- <h3 class="secondary-title">Adding Compounding Interest to the TVM Equation</h3> -->
                 </div>
             </div>
             <nav class="row">
@@ -34,22 +34,17 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>So far, when referring to interest rates, we have used the stated, or nominal rate.
-                            <div>Nominal rate = Stated rate</div>
-                        </p>
-                        <p>Stated rates are usually expressed as an annual percentage, which can be a bit misleading when compounding is involved. The next example shows how nominal and actual interest rates can differ due to compounding.</p>
-                        <p>Let's continue with our original example but assume semi-annual compounding.</p>
-                        <p>The bank pays interest every 6 months. The first interest payment, after 6 months, is calculated based on the original investment PLUS the first interest payment. Every 6 months, the amound of interest paid increases. Visually, semi-annual compounding looks like this:
+                        <p>When compounding is involved, we can still use the general form of the TVM equation. We just need to add another variable to the equation. With semi-annual interest, half the stated interest is paid at the end of each interest period, but there are twice as many interest periods. Mathematically, interest was divided by 2 and the number of terms was multiplied by 2, as shown below.
                             <div class="bottom-space">
-                                <img src="./images/tvm2_semi-annual_interest_timeline.png" class="img-fluid " alt="">
+                                <img src="../images/tvm_sample_equation_modify_for_compounding_insert_semiannual.png" class="img-fluid " alt="">
                             </div>
                         </p>
-                        <p>Since interest is compounded semi-annually, half of 10% (or 5%)would be credited to the account after 6 months and the other half at the end of the year.
+                        <p>This new variable is m, which represents the number of compounding periods per year. In our example, m= 2 because compounding is semi-annual. Let's modify the equation to replace 2's with m's:
                             <div class="bottom-space">
-                                <img src="./images/tvm2_semi-annual_interest_timeline_part2.png" class="img-fluid " alt="">
+                                <img src="../images/tvm_sample_equation_modify_for_compounding_put_in_m.png" class="img-fluid " alt="">
                             </div>
                         </p>
-                        <p>Notice that the second interest payment is higher than the first. Interest earned during the first term will earn interest in the second term. By compounding, we earned 0.25% more than the nominal rate (i.e., what we would make with annual compounding). Therefore, actual interest is 10.25%.</p>
+                        <p>This is <b>not</b> a new equation, but a modification to the basic form you already know. Just remember that when compounding occurs more frequently than once a year, always divide by m and multiply by m.</p>
                     </div>
                 </div>
             </div>
@@ -64,6 +59,7 @@
             </div>
         </div>
 
+
     </div> <!--  end of container -->
 
 
@@ -71,6 +67,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <script src="../script.js"></script>
 </body>
