content finished, setting up exercises

--- a/compounding/compounding-5.html
+++ b/compounding/compounding-5.html
@@ -28,7 +28,7 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-9.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -43,7 +43,7 @@
                             <h3>Compound Interest</h3>
                             <p><img src="../images/tvm2_annual_interest_timeline_compounding_shown.png" class="img-fluid " alt="two interest periods that show compound interest"></p>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
