--- a/compounding/compounding-7.html
+++ b/compounding/compounding-7.html
@@ -28,20 +28,20 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-9.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
                         <p>When compounding is involved, we can still use the general form of the TVM equation. We just need to add another variable to the equation. With semi-annual interest, half the stated interest is paid at the end of each interest period, but there are twice as many interest periods. Mathematically, interest was divided by 2 and the number of terms was multiplied by 2, as shown below.
-                            <div class="bottom-space">
-                                <img src="../images/tvm_sample_equation_modify_for_compounding_insert_semiannual.png" class="img-fluid " alt="">
+                            <div>
+                                <span class="math">\(FV=PV(1+\frac{i}{2})^{n\times2}\)</span>
                             </div>
                         </p>
                         <p>This new variable is m, which represents the number of compounding periods per year. In our example, m= 2 because compounding is semi-annual. Let's modify the equation to replace 2's with m's:
-                            <div class="bottom-space">
-                                <img src="../images/tvm_sample_equation_modify_for_compounding_put_in_m.png" class="img-fluid " alt="">
+                            <div>
+                                <span class="math">\(FV=PV(1+\frac{i}{m})^{n\times{m}}\)</span>
                             </div>
                         </p>
                         <p>This is <b>not</b> a new equation, but a modification to the basic form you already know. Just remember that when compounding occurs more frequently than once a year, always divide by m and multiply by m.</p>
