--- a/compounding/compounding-6.html
+++ b/compounding/compounding-6.html
@@ -28,23 +28,22 @@
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-help.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./compounding-9.html">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>So far, when referring to interest rates, we have used the stated, or nominal rate.</p>
-                        <p>Stated rates are usually expressed as an annual percentage, which can be a bit misleading when compounding is involved. The next example shows how nominal and actual interest rates can differ due to compounding.</p>
+                        <p>So far, when referring to interest rates, we have used the stated, or nominal rate. Stated rates are usually expressed as an annual percentage, which can be a bit misleading when compounding is involved. The next example shows how nominal and actual interest rates can differ due to compounding.</p>
                         <p>Let's continue with our original example but assume semi-annual compounding.</p>
                         <p>The bank pays interest every 6 months. The first interest payment, after 6 months, is calculated based on the original investment PLUS the first interest payment. Every 6 months, the amound of interest paid increases. Visually, semi-annual compounding looks like this:
-                            <div class="bottom-space">
-                                <img src="../images/tvm2_semi-annual_interest_timeline.png" class="img-fluid " alt="">
+                            <div>
+                                <img src="../images/tvm2_semi-annual_interest_timeline.png" class="img-fluid " alt="2 simple interest periods">
                             </div>
                         </p>
                         <p>Since interest is compounded semi-annually, half of 10% (or 5%)would be credited to the account after 6 months and the other half at the end of the year.
-                            <div class="bottom-space">
-                                <img src="../images/tvm2_semi-annual_interest_timeline_part2.png" class="img-fluid " alt="">
+                            <div>
+                                <img src="../images/tvm2_semi-annual_interest_timeline_part2.png" class="img-fluid " alt="two interest periods showing the second period with higher ROI">
                             </div>
                         </p>
                         <p>Notice that the second interest payment is higher than the first. Interest earned during the first term will earn interest in the second term. By compounding, we earned 0.25% more than the nominal rate (i.e., what we would make with annual compounding). Therefore, actual interest is 10.25%.</p>
